Fix horizontal scroll on small devices

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ html {
 body {
   background-color: var(--black);
   max-width: var(--max-width);
-  padding: 32px;
+  padding: 32px 0px;
   overflow-x: hidden;
   scroll-behavior: smooth;
 }
